Review changes addressed

--- a/SfChart_BindExcelData/SfChart_BindExcelData.csproj
+++ b/SfChart_BindExcelData/SfChart_BindExcelData.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="Data.xlsx">
+    <EmbeddedResource Include="Resource\Data.xlsx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
   </ItemGroup>
